--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
 		</title>
 		<!-- build:css css/vendor.css-->
 		<!-- bower:css-->
+		<link rel="stylesheet" href="bower/bootstrap4/dist/css/bootstrap.min.css" />
 		<link rel="stylesheet" href="bower/animate.css/animate.css" />
 		<!-- endbower-->
 		<!-- endbuild-->
@@ -49,6 +50,7 @@
 		<!-- build:js js/vendor.js-->
 		<!-- bower:js-->
 		<script src="bower/jquery/dist/jquery.js"></script>
+		<script src="bower/bootstrap4/dist/js/bootstrap.min.js"></script>
 		<script src="bower/jquery.nicescroll/jquery.nicescroll.min.js"></script>
 		<script src="bower/jquery.stellar/jquery.stellar.js"></script>
 		<!-- endbower-->
